gitops/platform/policies/base/require-run-as-non-root.yaml
# CIS 5.2.x — require runAsNonRoot on containers.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cis-require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: CIS
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - cert-manager
                - istio-system
                - monitoring
                - kyverno
                - argocd
                - couchbase
      validate:
        message: "Containers must set securityContext.runAsNonRoot=true."
        pattern:
          spec:
            =(ephemeralContainers):
              - securityContext:
                  runAsNonRoot: true
            =(initContainers):
              - securityContext:
                  runAsNonRoot: true
            containers:
              - securityContext:
                  runAsNonRoot: true
